tests/baselines/reference/moduleVariableArrayIndexer.errors.txt
moduleVariableArrayIndexer.ts(3,13): error TS18050: The value 'undefined' cannot be used here.


==== moduleVariableArrayIndexer.ts (1 errors) ====
    module Bar {
        export var a = 1;
        var t = undefined[a][a]; // CG: var t = undefined[Bar.a][a];
                ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    }
    